@@ -1,5 +1,7 @@
 package com.bounswe2026group1.backend.config;
 
+import com.bounswe2026group1.backend.model.UserStatus;
+import com.bounswe2026group1.backend.repository.RegisteredUserRepository;
 import com.bounswe2026group1.backend.util.JwtUtil;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
@@ -8,13 +10,14 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 @RequiredArgsConstructor
@@ -23,6 +26,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
     static final String SSE_COOKIE_NAME = "sse_token";
 
     private final JwtUtil jwtUtil;
+    private final RegisteredUserRepository registeredUserRepository;
 
     @Override
     protected void doFilterInternal(HttpServletRequest request,
@@ -74,10 +78,28 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
                 String userEmail = jwtUtil.extractEmail(jwt);
                 if (userEmail != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+
+                    // Load user from DB to check ban status and get current role
+                    var userOpt = registeredUserRepository.findByEmail(userEmail);
+                    if (userOpt.isEmpty()) {
+                        filterChain.doFilter(request, response);
+                        return;
+                    }
+
+                    var user = userOpt.get();
+
+                    // Reject banned users immediately
+                    if (user.getStatus() == UserStatus.BANNED) {
+                        response.sendError(HttpServletResponse.SC_FORBIDDEN, "Account is banned");
+                        return;
+                    }
+
+                    // Create an Authentication object with the user's role as a granted authority
+                    var authority = new SimpleGrantedAuthority("ROLE_" + user.getRole());
                     UsernamePasswordAuthenticationToken authToken = new UsernamePasswordAuthenticationToken(
                             userEmail,
                             null,
-                            Collections.emptyList()
+                            List.of(authority)
                     );
                     authToken.setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
                     SecurityContextHolder.getContext().setAuthentication(authToken);
